# ajenitk-context

./: .env.example  CLAUDE.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  MCP_DEVELOPMENT_GUIDE.md  MIGRATION_GUIDE.md  Makefile  NPM_PUBLISHING.md  PUBLISHING.md  README.md  README.npm.md  REFACTORING_SUMMARY.md  RENAME_SUMMARY.md  ajentik-coding.md  build.sh  docker-compose.yml  package.json  planning.md  publish.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  setup_dev.py  tasks.md  test_install.sh
.github/workflows/: ci.yml  publish.yml
docs/: API_REFERENCE.md  BEST_PRACTICES.md  CLI_GUIDE.md  GETTING_STARTED.md  MCP.md  MONITORING.md  README.md  TOOLS.md
examples/: 01_basic_chat.py  02_code_generation.py  03_code_analysis.py  04_monitoring_example.py  05_advanced_features.py  README.md  example_tool.py  mcp_server_config.json  mcp_usage.py
scripts/: build-wrapper.js  postinstall.js
src/: __init__.py  exceptions.py
src/agents/: __init__.py  analysis_agent.py  base_agent.py  chat_agent.py  code_agent.py
src/cli/: chat_interface.py  main.py  mcp_command.py  tools_command.py  utils.py
src/config/: __init__.py  loader.py  settings.py
src/mcp/: __init__.py  client.py  converters.py  models.py  server.py  server_script.py  transport.py
src/models/: __init__.py  configs.py  schemas.py
src/monitoring/: __init__.py  enhanced_monitoring.py  metrics.py
src/tools/: __init__.py  base.py  base_refactored.py  decorators.py  decorators_refactored.py  documentation.py  loader.py  registry.py  registry_refactored.py  validation.py
src/tools/builtin/: __init__.py  file_system.py
src/utils/: __init__.py  dependencies.py  logfire_setup.py  logging.py  retry.py  type_mapping.py  validation.py
tests/: __init__.py  conftest.py  test_agents.py  test_base.py  test_cli.py  test_decorators.py  test_mcp.py  test_models.py  test_monitoring.py  test_registry.py  test_tools.py  test_utils.py
